[gd_scene load_steps=7 format=3 uid="uid://bnxjfdqtiql43"]

[ext_resource type="Script" path="res://weapons/dagger.gd" id="1_1puek"]
[ext_resource type="Texture2D" uid="uid://pn78frsda48" path="res://art/oubliette_weapons - free/spr_wep_iron_daggers_0.png" id="1_8e5gy"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_n6l47"]
radius = 3.0
height = 24.513

[sub_resource type="Animation" id="Animation_uxqqn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_7in3n"]
resource_name = "Attack"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7p8hg"]
_data = {
"Attack": SubResource("Animation_7in3n"),
"RESET": SubResource("Animation_uxqqn")
}

[node name="Dagger" type="Area2D"]
scale = Vector2(1.5, 1.5)
script = ExtResource("1_1puek")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-12.6667, -11.3333)
rotation = -0.785398
shape = SubResource("CapsuleShape2D_n6l47")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-15.7353, -14.6372)
rotation = 1.0472
texture = ExtResource("1_8e5gy")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7p8hg")
}

[node name="DeleteTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true
autostart = true

[node name="StopMoveTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DeleteTimer" to="." method="_on_delete_timer_timeout"]
[connection signal="timeout" from="StopMoveTimer" to="." method="_on_stop_move_timer_timeout"]
